--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ body {
   padding: 0px;
 }
 .about-img {
+  display: block
 }
 /**
   |============================
@@ -286,6 +287,7 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 .team-img {
+  display: block
   margin-bottom: 0px;
 }
 .subtitle {
@@ -386,6 +388,9 @@ body {
   margin-left: 156px;
   margin-right: 156px;
   margin-bottom: 120px;
+}
+.portfolio-img{
+  display: block;
 }
 .porfolio-item {
   border: 1px solid #e7e9fc;
