--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ body {
   color: var(--color-slate);
   background-color: var(--color-white);
 }
-img{
-  display: block
+img {
+  display: block;
 }
 .hidden {
   width: 1px;
@@ -69,19 +69,18 @@ img{
 */
 .cont {
   display: flex;
-  
 }
-.container{
+.container {
   width: 1158px;
   margin: 0 auto;
-  padding: 0 15px
+  padding: 0 15px;
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
 .header-nav {
   display: inline-flex;
-  align-items: center; 
+  align-items: center;
   gap: 40px;
 }
 .header-link {
@@ -105,12 +104,12 @@ img{
   color: var(--color-navy-blue);
 }
 .header-list {
-  display:flex;
-  gap: 24px;
+  display: flex;
+  gap: 40px;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 .header-item {
-  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -119,10 +118,10 @@ img{
 }
 .contact {
   font-style: normal;
-  margin-left: 332px;
+  margin-left: 293px;
 }
 .contact-list {
-  display:flex;
+  display: flex;
   color: var(--color-slate);
   font-family: var(--main-font);
   letter-spacing: 0.02em;
@@ -140,18 +139,17 @@ img{
   letter-spacing: 0.02em;
 }
 .contact-tel {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
 /**
   |============================
   | Hero Section
   |============================
 */
-.hero-cont{
- 
+.hero-cont {
 }
 .hero-section {
   padding: 188px 0;
@@ -164,13 +162,13 @@ img{
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  margin-left: 500px;
+  margin-left: 472px;
+
   padding-top: 174px;
   margin-bottom: 48px;
 }
 .button {
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
@@ -189,11 +187,9 @@ img{
   margin-bottom: 204px;
   margin-top: 100px;
   margin-right: 667px;
- 
 }
 .button-text {
   text-transform: capitalize;
-  
 }
 .btn:hover,
 .btn:focus {
@@ -209,13 +205,15 @@ img{
   min-width: 1128px;
   min-height: 104px;
   letter-spacing: 0.02em;
+  padding: 120px 0;
+}
+.desc-container {
 }
 .desc-list {
-  display: inline-flex;
+  display: flex;
   letter-spacing: 0.02em;
   gap: 24px;
-  margin-left: 156px;
-  margin-bottom: 0;
+  width: calc((100% - 72px) / 4);
 }
 .desc-item {
 }
@@ -230,6 +228,7 @@ img{
   order: 0;
   flex-grow: 0;
   text-transform: capitalize;
+  margin-bottom: 8px;
 }
 .desc-text {
   width: 264px;
@@ -246,7 +245,9 @@ img{
   |============================
 */
 .about-section {
-  margin-bottom: 72px;
+  padding-bottom: 120px;
+}
+.about-cont {
 }
 .about-title {
   font-weight: 700;
@@ -259,16 +260,14 @@ img{
   margin-bottom: 72px;
 }
 .about-list {
-  display: inline-flex;
-  margin: 0 auto;
-  padding-left: 156px;
+  display: flex;
   gap: 24px;
 }
 .about-item {
+  width: calc((100% - 48px) / 3);
   padding: 0px;
 }
 .about-img {
-  
 }
 /**
   |============================
@@ -276,8 +275,10 @@ img{
   |============================
 */
 .team-section {
-  margin-bottom: 0px;
+  padding: 120px 0;
   background-color: var(--color-cloud);
+}
+.team-cont {
 }
 .section-title {
   font-size: 36px;
@@ -286,25 +287,27 @@ img{
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--color-navy-blue);
-  padding-top: 120px;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .team-list {
-  display: inline-flex;
-  padding-bottom: 120px;
-  margin-bottom: 0%;
-  padding-left: 156px;
-  gap: 32px;
+  display: flex;
+  gap: 24px;
 }
 .team-item {
   background: var(--color-white);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 72px) / 4);
 }
 .team-img {
-  
-  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-content {
+  padding: 32px 16px;
+  text-align: center;
+  letter-spacing: 0.02em;
 }
 .subtitle {
   font-weight: 500;
@@ -313,7 +316,7 @@ img{
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--color-navy-blue);
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 .small-text {
   font-size: 16px;
@@ -321,31 +324,25 @@ img{
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--color-slate);
-  padding-bottom: 0px;
-  margin-bottom: 0px;
 }
-.card-content {
-  margin: 32px 16px;
-  text-align: center;
-  letter-spacing: 0.02em;
-}
+
 /**
   |============================
   | Footer
   |============================
 */
-.footer-container {
-  padding-top: 100px;
-  padding-bottom: 100px;
+
+.footer {
+  padding: 100px 0;
   background-color: var(--color-navy-blue);
 }
-.footer {
-  margin-left: 156px;
+.footer-container {
 }
 .footer-link {
   margin-left: 0px;
   margin-bottom: 16px;
-  display: inline-flex;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-text {
   width: 71px;
@@ -360,7 +357,7 @@ img{
   flex-grow: 0;
 }
 .footer-text {
-  width: 264px;
+  max-width: 264px;
   font-size: 16px;
   line-height: 1.5;
   color: var(--color-cloud);
@@ -370,19 +367,18 @@ img{
   | Portfolio
   |============================
 */
-.nav-btn {
-  display: inline-flex;
+.nav-section{
+  padding: 96px 0 120px;
+}
+.nav-btn-list {
+  display: flex;
+  justify-content: center;
   flex-direction: row;
   align-items: flex-start;
   gap: 24px;
-  width: 586px;
-  height: 48px;
-  left: 427px;
-  top: 168px;
-  margin-top: 96px;
-  margin-left: 476px;
   margin-bottom: 72px;
 }
+
 .main-btn {
   cursor: pointer;
   height: 48px;
@@ -396,21 +392,25 @@ img{
   border-radius: 4px;
   color: var(--color-iris);
   font-weight: 500;
+  padding: 12px 24px;
 }
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin-left: 156px;
-  margin-right: 156px;
-  margin-bottom: 120px;
+  row-gap: 48px;
+  column-gap: 24px; 
+
 }
-.portfolio-img{
- 
+.portfolio-img {
 }
-.porfolio-item {
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+   margin-bottom: 46px;
+}
+.portfolio-card{
+  padding: 32px 16px;
   border: 1px solid #e7e9fc;
-  margin-bottom: 46px;
+  border-top: none; 
 }
 .row-section {
 }
@@ -422,8 +422,7 @@ img{
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-navy-blue);
-  margin-top: 32px;
-  margin-left: 16px;
+  margin-bottom: 8px;
 }
 .row-text {
   font-weight: 400;
