--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ img {
 .btn:focus {
   background-color: var(--color-ocean);
   color: var(--color-white);
+ 
 }
 /**
   |============================
@@ -389,9 +390,13 @@ img {
   color: var(--color-iris);
   font-weight: 500;
   padding: 12px 24px;
-  border: 1px solid var(--color-cornflower);
+  
   border-radius: 4px;
   border: 1px solid transparent;
+}
+.main-btn:hover,
+.main-btn:focus {
+  border: 1px solid var(--color-cornflower);
 }
 .portfolio-list {
   display: flex;
