--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ img {
 .header-nav {
   display: inline-flex;
   align-items: center;
-  gap: 40px;
 }
 .header-link {
   font-family: var(--logo-font);
@@ -115,7 +114,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-navy-blue);
-  
 }
 .contact {
   font-style: normal;
@@ -144,7 +142,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-
 /**
   |============================
   | Hero Section
@@ -163,9 +160,8 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-  margin-left: 472px;
-
-  padding-top: 174px;
+margin-left: auto;
+margin-right: auto;
   margin-bottom: 48px;
 }
 .button {
@@ -173,7 +169,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  padding: 16px 32px;
   gap: 15px;
   color: var(--color-white);
   background-color: var(--color-iris);
@@ -184,10 +179,8 @@ img {
   min-width: 169px;
   height: 56px;
   display: block;
-  margin-left: 668px;
-  margin-bottom: 204px;
-  margin-top: 100px;
-  margin-right: 667px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .button-text {
   text-transform: capitalize;
@@ -239,7 +232,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate);
-  margin-bottom: 120px;
 }
 /**
   |============================
@@ -339,10 +331,18 @@ img {
 .footer-container {
 }
 .footer-link {
-  margin-left: 0px;
   margin-bottom: 16px;
-  display: inline-block;
-  margin-bottom: 16px;
+ font-family: var(--logo-font);
+font-weight: 800;
+font-size: 18px;
+line-height: 1.17;
+align-items: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--color-iris);
+margin-right: 76px;
+display: flex;
+padding: 0px;
 }
 .footer-logo-text {
   width: 71px;
@@ -392,8 +392,6 @@ img {
   padding: 12px 24px;
   border-radius: 4px; 
   border: 1px solid var(--color-cornflower);
-  
-  
 }
 .main-btn:hover,
 .main-btn:focus {
@@ -409,7 +407,6 @@ img {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
-  margin-bottom: 46px;
 }
 .portfolio-card {
   padding: 32px 16px;
