--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,8 @@ img {
   line-height: 1.07;
   letter-spacing: 0.02em;
   max-width: 496px;
-margin-left: auto;
-margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 48px;
 }
 .button {
@@ -189,7 +189,6 @@ margin-right: auto;
 .btn:focus {
   background-color: var(--color-ocean);
   color: var(--color-white);
- 
 }
 /**
   |============================
@@ -331,18 +330,19 @@ margin-right: auto;
 .footer-container {
 }
 .footer-link {
+  display: inline-block;
   margin-bottom: 16px;
- font-family: var(--logo-font);
-font-weight: 800;
-font-size: 18px;
-line-height: 1.17;
-align-items: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--color-iris);
-margin-right: 76px;
-display: flex;
-padding: 0px;
+  font-family: var(--logo-font);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-iris);
+  margin-right: 76px;
+  display: flex;
+  padding: 0px;
 }
 .footer-logo-text {
   width: 71px;
@@ -390,7 +390,7 @@ padding: 0px;
   color: var(--color-iris);
   font-weight: 500;
   padding: 12px 24px;
-  border-radius: 4px; 
+  border-radius: 4px;
   border: 1px solid var(--color-cornflower);
 }
 .main-btn:hover,
